--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,15 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.0.2",
+    "body-parser": "^1.8.1",
+    "cors": "^2.4.2",
+    "express": "^4.9.0",
+    "jwt-simple": "^0.2.0",
+    "moment": "^2.8.3",
+    "mongoose": "^3.8.17",
+    "request": "^2.44.0"
+  }
 }
